--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
         "hooks": {
             "pre-commit": "pnpm build:swear"
         }
+    },
+    "dependencies": {
+        "axios": "^1.2.0",
+        "cheerio": "1.0.0-rc.12",
+        "fs-extra": "^10.1.0",
+        "node-fetch": "^3.3.0",
+        "request-libcurl": "^2.3.4"
     }
 }
