--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "pnpm build:swear"
+            "pre-commit": "pnpm build:swear && node ./src/refreshJSDelivr.mjs"
         }
     },
     "dependencies": {
         "axios": "^1.2.0",
         "cheerio": "1.0.0-rc.12",
         "fs-extra": "^10.1.0",
+        "lodash-es": "^4.17.21",
         "node-fetch": "^3.3.0",
         "pica": "^9.0.1",
         "request-libcurl": "^2.3.4"
