--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "devDependencies": {
         "@types/papaparse": "^5.3.5",
         "husky": "^8.0.2",
-        "papaparse": "^5.3.2"
+        "md5": "^2.3.0",
+        "papaparse": "^5.3.2",
+        "prompt-extractor": "^1.1.1"
     },
     "husky": {
         "hooks": {
