--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-    "name": "magic-tags",
+    "name": "tag-collection",
     "version": "2.0.2",
     "main": "",
     "description": "",
+    "files": [
+        "data/split/"
+    ],
     "scripts": {
-        "build:swear": "node ./src/swearFilter.mjs"
+        "build": "node ./src/swearFilter.mjs && node ./src/splitTagsToSmaller.mjs"
     },
     "license": "GPL-3.0",
     "devDependencies": {
@@ -12,20 +15,19 @@
         "husky": "^8.0.2",
         "md5": "^2.3.0",
         "papaparse": "^5.3.2",
-        "prompt-extractor": "1.1.2"
-    },
-    "husky": {
-        "hooks": {
-            "pre-push": "pnpm build:swear && node ./src/refreshJSDelivr.mjs"
-        }
-    },
-    "dependencies": {
+        "prompt-extractor": "1.1.2",
         "axios": "^1.2.0",
+        "bson": "1.1.6",
         "cheerio": "1.0.0-rc.12",
         "fs-extra": "^10.1.0",
         "lodash-es": "^4.17.21",
         "node-fetch": "^3.3.0",
         "pica": "^9.0.1",
         "request-libcurl": "^2.3.4"
+    },
+    "husky": {
+        "hooks": {
+            "pre-push": "pnpm build && node ./src/refreshJSDelivr.mjs"
+        }
     }
 }
