--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
     "license": "GPL-3.0",
     "devDependencies": {
         "@types/papaparse": "^5.3.5",
-        "husky": "^8.0.2",
-        "md5": "^2.3.0",
-        "papaparse": "^5.3.2",
-        "prompt-extractor": "1.1.2",
         "axios": "^1.2.0",
         "bson": "1.1.6",
         "cheerio": "1.0.0-rc.12",
         "fs-extra": "^10.1.0",
+        "husky": "^8.0.2",
         "lodash-es": "^4.17.21",
+        "md5": "^2.3.0",
         "node-fetch": "^3.3.0",
+        "papaparse": "^5.3.2",
         "pica": "^9.0.1",
+        "prompt-extractor": "1.1.2",
         "request-libcurl": "^2.3.4"
     },
     "husky": {
         "hooks": {
             "pre-push": "pnpm build && node ./src/refreshJSDelivr.mjs"
         }
+    },
+    "dependencies": {
+        "leancloud-storage": "^4.14.0"
     }
 }
